Se termino la portada.

--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,9 @@ h1 a {
         grid: 1fr / 1fr;
     }
 }
+
+
+
 /* Final GRID */
 
 /* Inicio iconos */
@@ -366,7 +369,20 @@ footer {
     text-align: center;
     background-color: var(--nucleoClaro);
     color: var(--blanco);
+/*     display: grid;
+    grid-template-columns: 1fr 1fr; */
 }
+
+/* footer .red_social {
+    height: 3rem;
+    margin: 0rem;
+    padding: 0rem;
+}
+
+footer  a:nth-child(2),
+footer  a:nth-child(3) {
+text-decoration: none;
+} */
 
 footer a {
     color: var(--blanco);
