--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@ h1 a {
         display: none; 
     }
     .nada {
-    background: var(--transparente);
+    background: rgba(0, 0, 0, 0.5);
     height: 90rem;
     width: auto;
     margin: auto;
