--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,7 @@ html {
 }
 
 body {
-    font-size: 16px;
-    /* Final 1 rem = 10px */
+    font-size: 1.6rem;
     background-color: var(--blanco);
     font-family: var(--texto);
 }
@@ -35,14 +34,18 @@ p {
     font-size: 2rem;
 }
 
-h3 {
-    font-size: 3rem;
+h3, h4 {
     font-weight: bold;
+    text-align: center;
+    color: var(--nucleoClaro);
+}
+
+h3 {
+    font-size: 6rem;
 }
 
 h4 {
-    font-size: 2.5rem;
-    font-weight: bold;
+    font-size: 3.5rem;
 }
 /* final 1 rem = 10px */
 /* //////////////////////////////////////////////////////////////// */
@@ -134,8 +137,8 @@ h1 a {
     font-family: var(--titulo), sans-serif;
     font-size: 2.5rem;
     background-color: var(--nucleoClaro);
-    
 }
+
 
 @media (max-width: 1440px) {
     .navegacion-barra a {
@@ -162,10 +165,11 @@ h1 a {
         border-bottom: 1px solid var(--nucleoOscuro);
     }
 }
-
+.activo, 
 .navegacion-barra a:hover {
-    background-color: var(--nucleoOscuro);
+    background-color: var(--nucleoOscuro)!important;
 }
+
 
 
 .navegacion_menu {
@@ -388,6 +392,7 @@ h1 a {
 /* Final portada */
 /* //////////////////////////////////////////////////////////////// */
 /* Incio GRID */
+/* INDEX */
 .contenedor {
     box-shadow: 0px 0px 10px 3px rgb(0 0 0 / 50%);
     padding: 1rem;
@@ -414,10 +419,36 @@ h1 a {
         grid: 1fr / 1fr;
     }
 }
+/* final INDEX */
+/* UBICACION */
+.grid__ubicacion {
+    display: grid;
+    grid: 1fr / 1fr 1fr;
+    gap: 2rem;
+}
 
+@media (max-width: 920px) {
+    .grid__ubicacion {
+        grid: 1fr / 1fr;
+        }
+}
 
+.contenedor__ubicacion {
+    padding: 1rem;
+    background-color: var(--blanco);
+    width: 100%;
+    height: 100%;
+}
+
+.googlemap {
+    width: 90%;
+    height: 50rem;
+    border: 5px outset var(--azulClaro);
+}
 
 /* Final GRID */
+
+
 
 /* Inicio iconos */
 
@@ -442,20 +473,8 @@ footer {
     text-align: center;
     background-color: var(--nucleoClaro);
     color: var(--blanco);
-/*     display: grid;
-    grid-template-columns: 1fr 1fr; */
 }
 
-/* footer .red_social {
-    height: 3rem;
-    margin: 0rem;
-    padding: 0rem;
-}
-
-footer  a:nth-child(2),
-footer  a:nth-child(3) {
-text-decoration: none;
-} */
 
 footer a {
     color: var(--blanco);
