--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,7 @@ h1 {
     margin: 0rem 0rem 0rem 0rem;
     font-family: var(--titulo), sans-serif;
     padding: 2rem 0rem 1rem 0rem;
+
 }
 
 @media (max-width: 480px) {
@@ -87,11 +88,25 @@ h1 {
 
 h1 a {
     text-decoration: none;
-    color: var(--nucleoClaro)
+    color: var(--nucleoClaro);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 6rem;
+}
+
+@media (max-width: 480px) {
+    h1 a {
+        height: 4rem;
+    }
 }
 
 a {
-        text-decoration: none;
+    text-decoration: none;
+}
+
+.header--logo {
+    height: 100%;
 }
 
 /* final header */
